# nnb-mantra

./: .gitignore  .goreleaser.yaml  Dockerfile  Makefile  PUBLISHING_GUIDE.md  chains.yaml  go.mod  readme.json
app/: app.go  encoding.go  evmosante.go
app/ante/: cosmos.go
app/queries/: queries.go
app/upgrades/: types.go
app/upgrades/v5/: constants.go  upgrades.go
client/docs/swagger/: swagger.go
cmd/nnbd/: main.go
cmd/nnbd/cmd/: commands.go  config.go  root.go  testnet.go
contracts/: README.md
contracts/bond-token/: Cargo.toml
contracts/bond-token/src/: contract.rs  lib.rs
contracts/carbon-credit-token/: Cargo.toml
contracts/carbon-credit-token/src/: contract.rs  lib.rs
contracts/oil-reserve-token/: Cargo.toml
contracts/oil-reserve-token/src/: contract.rs  lib.rs
scripts/: deploy-cw20-tokens.sh  launch-testnet.sh
scripts/ci-goreleaser/: .goreleaser.yaml
tests/connect/: connect_integration_test.go  go.mod
tests/e2e/: chain.go  e2e_evidence_test.go  e2e_exec_test.go  e2e_ibc_test.go  e2e_ica_test.go  e2e_setup_test.go  e2e_tokenfactory_test.go  genesis.go  query.go
tests/interchain/: cosmwasm_test.go  go.mod  txs_test.go
tests/interchain/chainsuite/: config.go
testutil/keeper/: sanction.go  tax.go
x/kyc/keeper/: keeper.go  msg_server.go
x/kyc/module/: module.go
x/kyc/types/: types.go
x/sanction/keeper/: ante.go  keeper.go  msg_server.go  msg_server_blacklist.go  query.go  query_params.go
x/sanction/module/: genesis.go  genesis_test.go  module.go  simulation.go
x/tokenfactory/: ibc_module.go  ibcv2_module.go  module.go
(+32 files in other folders)
