[package]
name = "oil-reserve-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["library"]
library = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["iterator"] }
cosmwasm-schema = "1.5"
cw20-base = { version = "0.16", features = ["library"] }
cw-storage-plus = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
